@@ -1,5 +1,16 @@
 2007-07-15  Christian Persch  <chpe@gnome.org>
 
+	* data/chrome/about.xhtml:
+	* data/epiphany.desktop.in.in:
+	* data/icons/16x16/apps/Makefile.am:
+	* data/icons/22x22/apps/Makefile.am:
+	* data/icons/32x32/apps/Makefile.am:
+	* lib/ephy-stock-icons.h:
+
+	Use the right icon name. Bug #385872.
+
+2007-07-15  Christian Persch  <chpe@gnome.org>
+
 	* src/popup-commands.c: (background_download_completed):
 
 	Load the appearance capplet. Doesn't seem to work yet, see bug
